# near-sdk-rs

examples/mb-fungible-token/: Cargo.toml  README.md  build.sh
examples/mb-fungible-token/ft/: Cargo.toml
examples/mb-fungible-token/src/: lib.rs
